examples/test/testpolicy13938.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13938
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key9: value46
      key34: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value9
      podSelector:
        matchLabels:
          key5: value45
          key24: value8
